         (Fred).
20080626 menu.c,ui/{gtk/gtkui.c,widget/menu.c,win32/win32ui.c}: amalgamate
         triplicated functions (patch #1991628) (Gergely Szasz).
20080626 compat/unix/file.c: add <string.h> for strerror prototypes, printf
         warning fixes too (Fred).
20080629 utils.c: add <string.h> for strncpy prototype (Fred).
20080629 menu.[ch],menu_data.[dat|pl],ui/widget/{menu.c,widget.[ch]}: add
         optional detail to menus showing current option selected (Fred).
20080630 dck.c,divide.c,fuse.c,if1.c,menu.c,rzx.c,simpleide.c,snapshot.c,
	 tape.c,zxatasp.c,zxcf.c: handle new allocator returns object
	 style API from libspectrum.
20080630 zxatasp.c: intialise error before returning it (Fred).
20080701 tape.c: one more function that can no longer error.
20080706 debugger/commandl.l: fix warning with recent versions of Flex.
20080706 sound/alsasound.c: don't call deprecated functions (fixes bug
	 #1916457) (Gergely Szasz).
20080706 menu.[ch],menu_data.dat,tape.[ch]: add some detail text for the tape
         branch for the Widget UI ala FuseX (thanks, crabfists) (Fred).
20080715 PORTING: add document on what you can and cannot do with Fuse's code.
20080717 ui/win32/debugger.c: Win32: accommodation for the new event
	 architecture (Marek).
20080719 README,fuse.c: try and direct support requests to locations seen
	 by more people than just me.
20080721 ui/win32/{win32ui.c,error.c,Makefile.am}: Win32: Integrated
	 ui_error_specific into win32ui.c similarly to gtk ui (Marek).
20080721 ui/win32/{win32ui.c,memorybrowser.c,binary.c,debugger.c,win32display.c,
	 browse.c,picture.c,roms.c,pokefinder.c}: Win32: make functions and
	 variables static wherever applicable (Marek).
20080721 ui/win32/{win32ui.c,win32internals.h,confirm.c,Makefile.am}: Win32:
	 fixed confirmation dialog box and moved it to confirm.c similarly to
	 gtk ui (Marek).
20080721 compat/unix/file.c: Win32: applied a minor fix to compat_file_open for
	 Win32 (Marek).